--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,13 @@ select {
   position: none !important;
 }
 
+.form {
+  margin-top: 20px;
+  width: 1200px;
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.5); /* Параметры тени */
+  padding: 10px;
+}
+
+.input-field {
+
+}
