--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,117 @@
+img {
+  width: 500px;
+  height: 600px;
+  /* max-width: 100%; */
+}
+body {
+  background-color: #f5f5f5;
+  max-width: 100%;
 
+  height: 100vh;
+}
+a {
+  font-size: 30px;
+}
+
+.layout_container {
+  height: 78vh;
+}
+
+.brand-logo {
+  margin-left: 20px;
+}
+.logo_img {
+  width: 300px;
+  height: 150px;
+  margin: 25px;
+}
+
+.a_navbar {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  margin-right: 15px;
+}
+
+.nav-main {
+  position: sticky !important;
+  top: 0;
+  z-index: 10;
+
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+}
 select {
   display: block !important;
 }
 .apartment {
+  overflow: hidden;
   display: flex;
   align-items: center;
   flex-direction: column;
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 25px;
+  border-radius: 30px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 .card-title {
   position: none !important;
+  color: #f5f5f5;
 }
 
 .form {
   margin-top: 20px;
   width: 1200px;
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.5); /* Параметры тени */
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5); /* Параметры тени */
   padding: 10px;
 }
 
-.input-field {
+.filter_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100vw;
+  height: 110px;
+}
 
+.btn_box {
+  border: none;
+}
+.btn_inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 75px;
+  background-color: #ffbc5b;
+  border-radius: 30px;
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  color: #0f0f0f;
+}
+.apartmentOne {
+  width: 600px;
+}
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: solid 2px black;
+}
+.footer_container {
+  margin-right: 25px;
+}
+.footer_p {
+  font-family: "IBM Plex Mono";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  color: #0f0f0f;
 }
