--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,16 +6,18 @@ img {
 body {
   background-color: #f5f5f5;
   max-width: 100%;
-
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 a {
   font-size: 30px;
 }
 
-.layout_container {
+/* .layout_container {
   height: 78vh;
-}
+} */
 
 .brand-logo {
   margin-left: 20px;
