--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,3 +117,8 @@ footer {
   font-size: 20px;
   color: #0f0f0f;
 }
+.favorites{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
